nginx/nginx.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx.roelvandegrint.com-ingress
 annotations:
  traefik.ingress.kubernetes.io/router.entrypoints: websecure
  cert-manager.io/issuer: letsencrypt-production-issuer
spec:
 tls:
   - hosts:
       - nginx.roelvandegrint.com
     secretName: nginx-ingress-http-production
 rules:
   - host: nginx.roelvandegrint.com
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: nginx
               port:
                 number: 80
